# bibleit

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  bump-version.sh  client.js  index.html  pyproject.toml  requirements.txt  server.py
.github/workflows/: lint.yml  publish.yml  python.yml
bibleit/: __main__.py  bible.py  config.py  context.py  read.py  repl.py
bibleit/command/: __init__.py  core.py  set.py
python/: Makefile  README.md  bump-version.sh
python/src/bibleit/: __main__.py  bible.py  config.py  context.py  repl.py  screen.py  translations
python/src/bibleit/command/: __init__.py  core.py  set.py
src/bibleit/: __main__.py  bible.py  config.py  context.py  normalize.py  repl.py  screen.py  test_bible.py
src/bibleit/command/: __init__.py  args.py  core.py  set.py
tools/: bible-diff.sh  bible_diff.py  bolls_fix_skip_verses.py  bolls_org_dw.py  concatenate.sh  gen-diff.py
tools/bolls/: books.json  books_test.json
zig/: README.md  build.zig  build.zig.zon
